GNOME Bugzilla – Bug 775621
gmessages: Fix compilation on Android
Last modified: 2016-12-05 12:24:10 UTC
See commit, should be self-explanatory
Created attachment 341389 [details] [review] gmessages: Fix compilation on Android There is no systemd on Android.
Review of attachment 341389 [details] [review]: OK.
Attachment 341389 [details] pushed as 620b3c1 - gmessages: Fix compilation on Android