gmessages: Fix compilation on Android

There is no systemd on Android.

https://bugzilla.gnome.org/show_bug.cgi?id=775621